cabal-version: 3.0

name: demo
version: 0

executable demo
    main-is: Main.hs

    build-depends:
      , base ^>= 4.17
      , optparse-applicative ^>= 0.17
      , path ^>= 0.9.2
      , relude ^>= 1.2
      , validation ^>= 1.1.2

    default-language: GHC2021

    default-extensions:
        ApplicativeDo
        BlockArguments
        DerivingStrategies
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
        RecordWildCards
